workshop03/app-with-volume.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bggapp-deploy-1
  namespace: bggns
  labels:
    app: bgg
    name: bggapp-deploy-1
spec:
  replicas: 3
  selector:
    matchLabels: # this means the pods with these labels belongs to this deployment
      app: bgg
      name: bggapp-pod
  template:
    # the pod template
    metadata:
      name: bggapp-pod
      # namespace: bggns
      labels:
        app: bgg
        name: bggapp-pod
    spec:
      volumes:
      # - name: myvolume
      #   hostPath:
      #     path: /tmp/mydir
      #     type: DirectoryOrCreate
      - name: cm-vol
        configMap:
          name: bgg-cm
      - name: secret-vol
        secret:
          secretName: bgg-secret
      containers:
      - name: bggapp-container
        image: stackupiss/bgg-backend:v2
        imagePullPolicy: IfNotPresent
        ports: 
        - containerPort: 3000
        livenessProbe: 
          httpGet:
            path: /healthz
            port: 3000
        readinessProbe: 
          httpGet:
            path: /healthz
            port: 3000
        volumeMounts:
        - name: cm-vol
          mountPath: /opt/configMap
        - name: secret-vol
          mountPath: /opt/secret

---
apiVersion: v1
kind: Service
metadata:
  name: bggapp-svc
  namespace: bggns
  labels:
    app: bgg
    name: bggapp-svc
spec:
  type: NodePort # to access from outside using node external-ip:node-port
  # type: LoadBalancer # load balancer
  selector:
    app: bgg
    name: bggapp-pod
  ports:
  - protocol: TCP
    port: 3000 # this is the port that the service listens on (service port)
    targetPort: 3000 # this is the port that the service forwards to (container port)
