workshop03/app-with-ingress-route-2.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: api

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deploy
  namespace: api
  labels:
    app: api
    name: api-deploy

spec:
  replicas: 3
  selector:
    matchLabels:
      app: api
      name: api-po
      version: v1
  template:
    metadata:
      name: api-po
      labels:
        app: api
        name: api-po
        version: v1
    spec:
      containers:
      - name: api-container
        image: chukmunnlee/fake-api:v1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: api-svc
  namespace: api
  labels:
    app: api
    name: api-svc
spec:
  type: ClusterIP
  selector:
    app: api
    name: api-po
    version: v1
  ports:
  - port: 3000
    targetPort: 3000

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  namespace: api
  labels:
    app: api
    name: api-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: api.137.184.249.143.nip.io 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dov-svc
            port:
              number: 3000
