workshop03/app-with-ingress.yaml
---
apiVersion: v1 
kind: Namespace
metadata: 
  name: dovns

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dov-deploy 
  #generateName: dov-deploy-
  namespace: dovns
  labels: 
    app: dov 
    name: dov-deploy 
spec: 
  replicas: 4
  selector:
    matchLabels:
      app: dov 
      name: dov-po
  template:
    # the pod template
    metadata:
      name: dov-po
      namespace: myns
      labels:
        app: dov 
        name: dov-po
    spec:
      volumes:
      - name: myvol
        emptyDir: {}
      containers:
      - name: dov-container 
        image: chukmunnlee/cfdsa-dov-bear:v1.1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
        livenessProbe:
          httpGet:
            path: /healthz
            port: 3000

---
apiVersion: v1 
kind: Service
metadata:
  name: dov-svc
  namespace: dovns 
  labels: 
    app: dov 
    name: dov-svc
spec:
  selector:
    app: dov 
    name: dov-po
  ports:
  - port: 3000
    targetPort: 3000


---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dov-ingress
  namespace: dovns
  labels:
    app: dov
    name: dov-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: dov-bear.137.184.249.143.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dov-svc
            port:
              number: 3000
