workshop03/deployment-with-volume.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: codeserver-deploy
  namespace: codeserverns
  labels:
    app: codeserver
    name: codeserver-deploy
spec:
  replicas: 1
  selector:
    matchLabels: 
      app: codeserver
      name: codeserver-pod
  template:
    metadata:
      name: codeserver-pod
      labels:
        app: codeserver
        name: codeserver-pod
    spec:
      volumes:
      - name: codeserver-volume
        persistentVolumeClaim:
          claimName: codeserver-pvc
      containers:
      - name: codeserver-container
        image: linuxserver/code-server:latest
        imagePullPolicy: IfNotPresent
        ports: 
        - containerPort: 8443
        volumeMounts:
        - name: codeserver-volume
          mountPath: /config/workspace

---
apiVersion: v1
kind: Service
metadata:
  name: codeserver-svc
  namespace: codeserverns
  labels:
    app: codeserver
    name: codeserver-svc
spec:
  type: ClusterIP
  selector:
    app: codeserver
    name: codeserver-pod
  ports:
  - port: 3000
    targetPort: 8443

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: codeserver-ingress
  namespace: codeserverns
  labels:
    app: codeserver
    name: codeserver-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: code-137.184.249.143.nip.io 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: codeserver-svc
            port:
              number: 3000
